# quickdir-linux

./: README.md  changelog.md  install.py  requirements.txt  setup.py
quickdir/: __init__.py  help.py  install.py  license.py  quickdir.py  setup.cfg  uninstall.py
tests/: __init__.py  test_quickdir.py
