[metadata]
name = quickdir
version = 1.0.0
author = Your Name
author_email = your_email@example.com
description = A command-line tool for quick directory navigation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/quickdir

[options]
packages = find:
install_requires =
    pyyaml

[options.entry_points]
console_scripts =
    qd = quickdir.main:main

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1


